<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_unselected_step"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="Select Step First!"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/view_detail_step"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:visibility="visible"
            android:id="@+id/player"
            android:focusable="true"
            android:layout_weight="0.4"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <ImageView
            android:visibility="gone"
            android:scaleType="centerCrop"
            android:id="@+id/img_step"
            android:layout_weight="0.4"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:layout_weight="0.4"
            tool:text="2. Combine the cake flour, 400 grams (2 cups) of sugar, baking powder, and 1 teaspoon of salt in the bowl of a stand mixer. Using the paddle attachment, beat at low speed until the dry ingredients are mixed together, about one minute"
            android:padding="10dp"
            android:id="@+id/tv_step_description"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/view_bottom_nav"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="0.2"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:weightSum="1.0">

            <android.support.design.widget.FloatingActionButton
                android:layout_gravity="center_vertical"
                app:fabSize="mini"
                android:id="@+id/fab_previous"
                android:src="@drawable/ic_nav_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_step_position"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                tool:text="Step 5/9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.FloatingActionButton
                android:layout_gravity="center_vertical"
                app:fabSize="mini"
                android:id="@+id/fab_next"
                android:src="@drawable/ic_nav_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>