<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="id.dekz.bakingapp.features.recipelist.RecipeListActivity">

    <include
        android:id="@+id/layout_app_bar"
        layout="@layout/app_bar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_below="@+id/layout_app_bar"
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </android.support.v4.widget.SwipeRefreshLayout>



</RelativeLayout>
