...
                android:textSize="13sp"
                tool:text="- Graham Cracker crumbs (2 CUP)\n- unsalted butter, melted (6 TBLSP)\n- granulated sugar (0.5 CUP)" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:background="@color/icons" />

    </LinearLayout>
...
